--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,30 @@ footer .copyright{
     animation: SLIDE-IN-FROM-TOP 2s ease forwards;
 }
 
+.animate.delay1{
+    -webkit-animation-delay: 0.5s;
+    -moz-animation-delay: 0.5s;
+    -ms-animation-delay: 0.5s;
+    -o-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+}
+
+.animate.delay2{
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -ms-animation-delay: 1s;
+    -o-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.animate.delay3{
+    -webkit-animation-delay: 1.5s;
+    -moz-animation-delay: 1.5s;
+    -ms-animation-delay: 1.5s;
+    -o-animation-delay: 1.5s;
+    animation-delay: 1.5s;
+}
+
 @-webkit-keyframes SLIDE-IN-FROM-TOP {
   0%   { opacity: 0; transform: translateY(-30px); }
   100% { opacity: 1; transform: translateY(0px); }
