--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,14 @@ main {
     background: rgba(0,0,0,0);
 }
 
+.banner .btn{
+    color: #fff;
+    background: #6237a0;
+    padding: 0.8rem 2rem;
+    border-radius: 100em;
+    margin-top: 1rem;
+}
+
 .navbar-dark.position-fixed {
     z-index: 1020;
     width: 100%;
