--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
 .mb2{margin-bottom: 2rem;}
 .mb3{margin-bottom: 3rem;}
 
+.mt1{margin-top: 1rem;}
+.mt2{margin-top: 2rem;}
+.mt3{margin-top: 3rem;}
+
 .nm{margin: 0;}
 .margin-auto{margin-left: auto; margin-right: auto;}
 .inline-block{display: inline-block;}
@@ -26,6 +30,8 @@ a.btn:hover{
     box-shadow: 0px 8px 10px rgba(0,0,0,0.1);
     transition: 0.5s all;
 }
+
+strong{color: #fff1ad;}
 
 h1{font-size: 4rem; padding-bottom: 2rem; margin-bottom: 2rem;}
 h2{font-size: 3rem; padding-bottom: 2rem; margin-bottom: 2rem;}
@@ -106,6 +112,8 @@ main {
 
 /* CONTENT */
 
+.page .container{padding-top: 8rem; padding-bottom: 8rem;}
+
 /* Rundown */
 #overview {
     background: #ffffff;
@@ -131,7 +139,6 @@ main {
 
 /* What is Crypto */
 #what_is_crypto{
-    margin-top: -100px;
     background: rgba(0,0,0,0);
     color: #fff;
 }
@@ -153,6 +160,7 @@ main {
     padding-bottom:56.25%;
     position:relative;
     height:0;
+    margin-bottom: 2rem;
 }
 .video-responsive iframe{
     left:0;
@@ -226,10 +234,8 @@ main {
     background: rgba(254, 240, 172, 0.25);
 }
 
-
 /* Paper */
 #paper{
-    margin-top: -100px;
     background: rgba(0,0,0,0);
     color: #fff;
 }
@@ -248,7 +254,6 @@ main {
 
 /* Team */
 #team{
-    margin-top: -100px;
     background: #ffffff;
     -webkit-transform: skewY(-8deg);
     -moz-transform: skewY(-8deg);
@@ -266,10 +271,7 @@ main {
     transform: skewY(8deg);
 }
 
-#team figure{
-    padding: 0 1rem;
-    margin-top: 2rem;
-}
+#team .profile {margin-bottom: 5rem;}
 
 #team span{
     position: relative;
@@ -296,7 +298,6 @@ main {
 
 #team h3{font-size: 1.3rem; color: #37a63f; margin: 1rem 0 0 0; padding: 0;}
 #team h5{font-size: 1rem; font-weight: bold; margin: 0 0 1rem 0; color: #3d4348;}
-#team figure p{text-align: justify; font-size: 0.9rem;}
 
 #team img{
     width: 80%;
@@ -325,8 +326,6 @@ footer .copyright{
 }
 
 #ajax-contact button{display: block; width: 100%; background: #36a63f; color: #fff;}
-
-.animate.fade-in{opacity: 0;}
 
 /* Animations */
 .animate.start{
@@ -361,32 +360,61 @@ footer .copyright{
     animation-delay: 1.5s;
 }
 
-@-webkit-keyframes SLIDE-IN-FROM-TOP {
-  0%   { opacity: 0; transform: translateY(-30px); }
-  100% { opacity: 1; transform: translateY(0px); }
-}
-@-moz-keyframes SLIDE-IN-FROM-TOP {
-  0%   { opacity: 0; transform: translateY(-30px); }
-  100% { opacity: 1; transform: translateY(0px); }
-}
-@-o-keyframes SLIDE-IN-FROM-TOP {
-  0%   { opacity: 0; transform: translateY(-30px); }
-  100% { opacity: 1; transform: translateY(0px); }
-}
-@keyframes SLIDE-IN-FROM-TOP {
-  0%   { opacity: 0; transform: translateY(-30px); }
-  100% { opacity: 1; transform: translateY(0px); }
+
+
+/* for screens larger than mobile */
+@media (min-width: 768px) {
+
+    #team .profile {margin-bottom: 5rem;}
+
+    .page .container{padding-top: 10rem; padding-bottom: 10rem;}
+
+    .animate.fade-in{opacity: 0;}
+
+    @-webkit-keyframes SLIDE-IN-FROM-TOP {
+        0%   { opacity: 0; transform: translateY(-30px); }
+        100% { opacity: 1; transform: translateY(0px); }
+    }
+    @-moz-keyframes SLIDE-IN-FROM-TOP {
+        0%   { opacity: 0; transform: translateY(-30px); }
+        100% { opacity: 1; transform: translateY(0px); }
+    }
+    @-o-keyframes SLIDE-IN-FROM-TOP {
+        0%   { opacity: 0; transform: translateY(-30px); }
+        100% { opacity: 1; transform: translateY(0px); }
+    }
+    @keyframes SLIDE-IN-FROM-TOP {
+        0%   { opacity: 0; transform: translateY(-30px); }
+        100% { opacity: 1; transform: translateY(0px); }
+    }
+
 }
 
+/* for large screens only */
+@media (mmin-width: 1200px) {
+
+    #team .profile {margin-bottom: 10rem;}
+
+    .page .container{padding-top: 20rem; padding-bottom: 20rem;}
+
+}
+
+
+/* for small screens only */
 @media (max-width: 575.98px) {
 
     h1{font-size: 3rem; padding-bottom: 1rem; margin-bottom:1rem;}
     h2{font-size: 2rem; padding-bottom: 1rem; margin-bottom: 1rem;}
     h3{font-weight: 500; color: #fff1ad; padding-bottom: 0.5rem;}
 
-    #paper a.btn {    
+    #paper a.btn {
         display: block;
         width: 100%;
         margin-bottom: 2rem;
+    }
+
+    #why_invest .tableWrap{
+        width: 100%;
+        overflow: scroll;
     }
 }
